  some edge cases
- bugfix: correctly parse multi-line basic strings, dealing properly with some
  edge cases
- bugfix: correctly escape unicode control characters in toml output
- bugfix: correctly handle comment-like sequences in multiline strings
- bugfix: correctly handle keys with names that are toml keywords
- bugfix: better handling of inf/nan in parsing, writing

0.13 2021-07-26
-Fix a spurious warning being raised on trailing spaces in hexadecimal numbers (thanks jjatria)

0.12 2021-05-28
-Fix bug causing to_toml to incorrectly dereference \1 and \0 (thanks oschwald)

0.11 2021-02-12
-Fix bug in strict_arrays where string containing integer is recognized as an
 integer, causing parsing to fail when present in an array containing other
 strings

0.10 2020-09-08
-Remove dependency on DateTime::Format::RFC3339

0.09 2020-08-11
-Fix warning when calling `to_toml(from_toml(...))`
-Fix bug allowing perl to stringify numbers (thanks oschwald)
-Fix bug disallowing weird forms of nan (+nan, -nan)
-Behavior change: return Math::Big(Int|Float) for large numbers (thanks oschwald)

0.08 2020-06-25
-Fix bug in TOML table output generation (thanks ijackson)

0.07 2020-05-08
-Add support for floating time zones in TOML output (thanks ijackson)
-Fix bug where datetimes were being outputed as ISO8601 instead of RFC3339
-Clarified documentation with explicit description of supported perl types for each toml type

0.06 2020-03-30
-Performance improvements in TOML::Tiny::Tokenizer->next_token
-Fix totally broken OO interface (thanks noctux)

0.05 2020-01-21
-POD fixes for TOML::Tiny::Grammar

0.04 2020-01-21
-Remove superfluous dependency on DateTime::Format::RFC3339, which was only
 needed for unit tests

0.03 2020-01-18
-Remove automatic inflation of numerical types using Math::Big(Int|Float);
 this may now be done with inflate_integer and inflate_float

0.02 2020-01-17
-Add MANIFEST.SKIP to prevent dzil from including author scripts

0.01 2020-01-17
-Initial release